better-routes/tests/trybuild/no-handler.stderr
error: No methods found
  --> tests/trybuild/no-handler.rs:34:1
   |
34 | impl Foo {}
   | ^^^^

error[E0277]: the trait bound `Foo: MethodHandler<State>` is not satisfied
  --> tests/trybuild/no-handler.rs:29:22
   |
29 |     "/foo" => struct Foo; => FooRejection,
   |                      ^^^ the trait `MethodHandler<State>` is not implemented for `Foo`
   |
   = help: the trait `MethodHandler<State>` is implemented for `Bar`
note: required by a bound in `get_all_routes`
  --> tests/trybuild/no-handler.rs:26:1
   |
26 | / routes! {
27 | |     State => State,
28 | |     Rejection => GlobalRejection,
29 | |     "/foo" => struct Foo; => FooRejection,
30 | |     "/bar" => struct Bar;,
31 | | }
   | |_^ required by this bound in `get_all_routes`
   = note: this error originates in the macro `routes` (in Nightly builds, run with -Z macro-backtrace for more info)
